--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     </div>
 
     <p class="subtitle">Track your routine, build streaks, stay disciplined.</p>
+    <div class="progress-box">
+  <div class="progress-text" id="progressText">Today: 0%</div>
+  <div class="progress-bar">
+    <div class="progress-fill" id="progressFill"></div>
+  </div>
+</div>
+
   </header>
 
   <main id="sections"></main>
@@ -51,3 +58,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
