--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
 
   <header class="top">
+    <div class="calendar-strip" id="calendarStrip"></div>
+
     <h1>Tracker</h1>
 
     <div class="top-bar">
@@ -58,4 +60,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
