Enhance header with streak tracking information
Added current and best streak display to header.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <p class="subtitle">Track your routine, build streaks, stay disciplined.</p>
 
   <!-- PROGRESS -->
+  <div class="streak-box">
+  🔥 <span id="currentStreak">0</span> day streak |
+  🏆 Best: <span id="bestStreak">0</span>
+</div>
+
   <div class="progress-box">
     <div class="progress-text" id="progressText">Today: 0%</div>
     <div class="progress-bar">
@@ -51,5 +56,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
