Fix duplicate progress box in index.html
Removed duplicate progress box and cleaned up HTML structure.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <header class="top">
   <h1>Tracker</h1>
   <p class="subtitle">Track your routine, build streaks, stay disciplined.</p>
+  <div class="streak-box">
+  🔥 <span id="currentStreak">0</span> day streak |
+  🏆 Best: <span id="bestStreak">0</span>
+</div>
+
 
   <!-- PROGRESS -->
   <div class="streak-box">
@@ -56,6 +61,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
